fixed font-size on small screen .layer

--- a/home.css
+++ b/home.css
@@ -219,6 +219,24 @@ display: none;
 
 @media only screen and (max-width: 600px){
 
+    .layer{
+        font-size: 13px;
+    }
+    
+    .layer h3{
+        margin: 5px;
+        font-size: 18px;
+    }
+    
+    .layer a{
+        font-size: 11px;
+    }
+    
+    .layer ul li{
+        list-style: none;
+        margin: 10px 0;
+    }
+
 .header-text{
     margin-top: 100%;
     font-size: 16px;
